--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ go:
 install:
   - go get -u github.com/golang/dep/cmd/dep
   - dep ensure
+  - npm install shelljs
 
 script:
   - "./scripts/run_tests_with_coverage.sh"
